# GoogleBenchmark-CMake-Example

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  CMakeSettings.json
src/StringBenchmarks/: CMakeLists.txt  StringBenchmarks.cpp  StringBenchmarks.h
src/cmake/: GoogleBenchmark.cmake
